# ca

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
devops/nginx/configs/: ingress.conf
src/: alembic.ini  main.py
src/app/adapters/db/: database.py
src/app/adapters/db/entities/: course.py  currency.py
src/app/adapters/db/repositories/: course.py  currency.py
src/app/adapters/db/types/: entity.py
src/app/adapters/exchange/: binance.py  coingecko.py  exchange.py
src/app/application/dto/: course.py  currency.py
src/app/application/protocols/: exchange.py
src/app/application/protocols/repositories/: course.py  currency.py
src/app/application/services/: course.py  currency.py
src/app/controllers/fastapi/: factory.py  router.py
src/app/controllers/fastapi/routers/: courses.py  currencies.py
src/app/core/: config.py
src/app/domain/models/: course.py  currency.py
src/app/domain/services/: course.py  currency.py
src/migrations/: env.py  models.py
src/migrations/versions/: 1f0618605699_initial.py
src/tests/test_domain/: test_services.py
